# davybot-market-cli

./: .gitignore  README.md  key.py  pyproject.toml
.github/: GITHUB_CONFIG_CHECKLIST.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependabot.yml  publish.yml
davybot_market/: __init__.py  cli.py  client.py  exceptions.py  models.py
davybot_market/commands/: install.py  publish.py
davybot_market_cli/: __init__.py  cli.py  client.py  exit_codes.py  models.py  utils.py
davybot_market_cli/commands/: info.py  install.py  publish.py  search.py
davybot_market_cli/types/: __init__.py  analytics.py  feedback.py  sync.py
docs/: LOCAL_CI_TEST_RESULTS.md  PYPI_OIDIC_FIX.md  PYPI_SETUP.md  PYPI_TOKEN_AUTH.md  RELEASE_v0.1.0.md  deploy.md
scripts/: check-release-status.sh
tests/: __init__.py  test_cli.py
