[project]
name = "davybot-market"
version = "0.1.0"
description = "CLI and SDK for DavyBot Market - AI Agent Resources"
authors = [
    {name = "DavyBot Market Team"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "httpx>=0.25.1",
    "rich>=13.6.0",
    "questionary>=2.0.1",
]

[project.scripts]
davy = "davybot_market.cli:cli"
dawei = "davybot_market.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["davybot_market"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
